upgrade metamask to 10.14.0

--- a/test/dapp/index.html
+++ b/test/dapp/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Local metamask test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="web3.min.js"></script>
 </head>
 <body>
     <button class="connect-button">Connect</button>
     <button class="sign-button">Sign</button>
     <button class="increase-button">Increase</button>
+    <script src="ethers.min.js"
+        type="application/javascript"></script>
+    <script src="detect-provider.min.js"
+        type="application/javascript"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
