feat!: replaced addTokenMethod

--- a/test/dapp/index.html
+++ b/test/dapp/index.html
@@ -13,6 +13,7 @@
     <button class="increase-button">Increase</button>
     <button class="increase-fees-button">Increase Fees</button>
     <button class="transfer-button">Transfer</button>
+    <button class="add-token-button">Add token</button>
 
     <script src="data.js"></script>
     <script src="main.js"></script>
