--- a/test/dapp/index.html
+++ b/test/dapp/index.html
@@ -14,6 +14,7 @@
     <button class="increase-fees-button">Increase Fees</button>
     <button class="transfer-button">Transfer</button>
     <button class="add-token-button">Add token</button>
+    <button class="add-network-button">Add network</button>
 
     <script src="data.js"></script>
     <script src="main.js"></script>
