--- a/test/dapp/index.html
+++ b/test/dapp/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <button class="connect-button">Connect</button>
-    <button class="sign-button">Sign</button>
+    <!-- <button class="connect-button">Connect</button> -->
+    <!-- <button class="sign-button">Sign</button> -->
     <button class="sign-typedData-button">Sign Typed Data</button>
     <button class="sign-short-typedData-button">Sign Short Typed Data</button>
     <button class="increase-button">Increase</button>
