--- a/test/flask/methods-snap/index.html
+++ b/test/flask/methods-snap/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <title>Hello, Snaps!</title>
-  <link rel="icon" type="image/svg" href="./images/icon.svg" />
 </head>
-
 <body>
 <h1>Hello, Snaps!</h1>
 <details>
@@ -54,9 +52,12 @@
     try {
       await ethereum.request({
         method: "wallet_invokeSnap",
-        params: [snapId, {
-          method: "hello"
-        }]
+        params: {
+          request: {
+            method: "hello"
+          },
+          snapId
+        }
       });
     } catch (err) {
       console.error(err);
